samples/_failures_safe/1761286823_293a4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_072a5eba.c: In function ‘main’:
./samples/SAFE/__tmp_072a5eba.c:153:13: error: expected declaration or statement at end of input
  153 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_072a5eba.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_072a5eba.c:153:13: error: expected declaration or statement at end of input
